issue-3249: Updated the schema

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10837,9 +10837,9 @@ keys:
               - int
             maximum_routes_warning_only:
               type: bool
-            missing_policy_af_all:
+            missing_policy:
               type: dict
-              description: Include all address families for missing policy configuration.
+              description: Missing policy override configuration.
               keys:
                 direction_in:
                   description: Missing policy inbound direction.
@@ -10851,18 +10851,26 @@ keys:
                       required: true
                       valid_values:
                       - deny
-                      - deny-in-out
                       - permit
-                    include:
-                      description: Include route map references in missing policy
+                    include_community_list:
+                      type: bool
+                      description: Include community list references in missing policy
                         decision.
-                      type: list
-                      items:
-                        type: str
-                        valid_values:
-                        - community-list
-                        - prefix-list
-                        - sub-route-map
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub route map references in missing policy
+                        decision.
+                    address_family_all:
+                      description: Include all address families for missing policy
+                        configuration.
+                      type: bool
+                      required: true
+                      valid_values:
+                      - true
                 direction_out:
                   description: Missing policy outbound direction.
                   type: dict
@@ -10873,18 +10881,26 @@ keys:
                       required: true
                       valid_values:
                       - deny
-                      - deny-in-out
                       - permit
-                    include:
-                      description: Include route map references in missing policy
+                    include_community_list:
+                      type: bool
+                      description: Include community list references in missing policy
                         decision.
-                      type: list
-                      items:
-                        type: str
-                        valid_values:
-                        - community-list
-                        - prefix-list
-                        - sub-route-map
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub route map references in missing policy
+                        decision.
+                    address_family_all:
+                      description: Include all address families for missing policy
+                        configuration.
+                      type: bool
+                      required: true
+                      valid_values:
+                      - true
             link_bandwidth:
               type: dict
               keys:
@@ -11101,9 +11117,9 @@ keys:
               - int
             maximum_routes_warning_only:
               type: bool
-            missing_policy_af_all:
+            missing_policy:
               type: dict
-              description: Include all address families for missing policy configuration.
+              description: Missing policy override configuration.
               keys:
                 direction_in:
                   description: Missing policy inbound direction.
@@ -11115,18 +11131,26 @@ keys:
                       required: true
                       valid_values:
                       - deny
-                      - deny-in-out
                       - permit
-                    include:
-                      description: Include route map references in missing policy
+                    include_community_list:
+                      type: bool
+                      description: Include community list references in missing policy
                         decision.
-                      type: list
-                      items:
-                        type: str
-                        valid_values:
-                        - community-list
-                        - prefix-list
-                        - sub-route-map
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub route map references in missing policy
+                        decision.
+                    address_family_all:
+                      description: Include all address families for missing policy
+                        configuration.
+                      type: bool
+                      required: true
+                      valid_values:
+                      - true
                 direction_out:
                   description: Missing policy outbound direction.
                   type: dict
@@ -11137,18 +11161,26 @@ keys:
                       required: true
                       valid_values:
                       - deny
-                      - deny-in-out
                       - permit
-                    include:
-                      description: Include route map references in missing policy
+                    include_community_list:
+                      type: bool
+                      description: Include community list references in missing policy
                         decision.
-                      type: list
-                      items:
-                        type: str
-                        valid_values:
-                        - community-list
-                        - prefix-list
-                        - sub-route-map
+                    include_prefix_list:
+                      type: bool
+                      description: Include prefix list references in missing policy
+                        decision.
+                    include_sub_route_map:
+                      type: bool
+                      description: Include sub route map references in missing policy
+                        decision.
+                    address_family_all:
+                      description: Include all address families for missing policy
+                        configuration.
+                      type: bool
+                      required: true
+                      valid_values:
+                      - true
             allowas_in:
               type: dict
               keys:
