--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11173,9 +11173,15 @@ keys:
             advertise_map:
               type: str
               description: Route-map name.
+              deprecation:
+                removed: true
+                remove_in_version: 4.9.0
             supress_map:
               type: str
               description: Route-map name.
+              deprecation:
+                removed: true
+                remove_in_version: 4.9.0
             summary_only:
               type: bool
             attribute_map:
