Adding negative test.

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -78,6 +78,7 @@ all:
             duplicate-vrfs-tenant-igmp-snooping-conflict:
             duplicate-interface-l3-edge:
             duplicate-l3-interfaces-network-services:
+            duplicate-peer-ip-address-network-services:
             duplicate-interfaces-point-to-point-services-1:
             duplicate-interfaces-point-to-point-services-2:
             duplicate-interfaces-point-to-point-services-3:
