--- a/.github/workflows/container_build_universal.yml
+++ b/.github/workflows/container_build_universal.yml
@@ -18,12 +18,14 @@ on:
 
 jobs:
   build_universal_container:
-    if: github.repository == 'aristanetworks/avd'
+    # if: github.repository == 'aristanetworks/avd'
+    # try to build on my fork
+    if: github.repository == 'ankudinov/avd'
     uses: ./.github/workflows/container_build_template.yml
     strategy:
       matrix:
         container_name: [universal]
-        python_version: ["3.9", "3.10", "3.11"]
+        python_version: ["3.10", "3.11", "3.12"]
         include:
           - python_version: "3.11"
             container_tags: latest
