trigger on all branches

--- a/.github/workflows/container_build_dev.yml
+++ b/.github/workflows/container_build_dev.yml
@@ -11,7 +11,8 @@ on:
       - .github/workflows/container_build_dev.yml
   workflow_dispatch:
     branches:
-      - devel
+      # - devel
+      - '**'
 
 jobs:
   build_dev_container:
