--- a/containers/universal/.devcontainer/Dockerfile
+++ b/containers/universal/.devcontainer/Dockerfile
@@ -3,7 +3,6 @@ ARG FROM_VARIANT
 
 FROM ${FROM_IMAGE}:${FROM_VARIANT}
 
-ARG ANSIBLE_CORE_VERSION
 ARG PYAVD_INSTALL_LOCATION
 ARG ANSIBLE_INSTALL_LOCATION
 ARG USERNAME
@@ -12,7 +11,7 @@ ARG USERNAME
 USER ${USERNAME}
 ENV PATH=$PATH:/home/${USERNAME}/.local/bin
 # Install Ansible AVD collection.
-RUN pip install "pyavd[ansible] @ ${PYAVD_INSTALL_LOCATION}" \
+RUN pip install "pyavd[ansible] @ $PYAVD_INSTALL_LOCATION" \
     && ansible-galaxy collection install ${ANSIBLE_INSTALL_LOCATION} \
     # install community.general to support callback plugins in ansible.cfg, etc.
     && ansible-galaxy collection install community.general
