revert to original substitution

--- a/containers/universal/.devcontainer/Dockerfile
+++ b/containers/universal/.devcontainer/Dockerfile
@@ -11,7 +11,7 @@ ARG USERNAME
 USER ${USERNAME}
 ENV PATH=$PATH:/home/${USERNAME}/.local/bin
 # Install Ansible AVD collection.
-RUN pip install "pyavd[ansible] @ $PYAVD_INSTALL_LOCATION" \
+RUN pip install "pyavd[ansible] @ ${PYAVD_INSTALL_LOCATION}" \
     && ansible-galaxy collection install ${ANSIBLE_INSTALL_LOCATION} \
     # install community.general to support callback plugins in ansible.cfg, etc.
     && ansible-galaxy collection install community.general
