--- a/containers/universal/.devcontainer/devcontainer.json
+++ b/containers/universal/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
             "FROM_IMAGE": "${localEnv:FROM_IMAGE}",
             "FROM_VARIANT": "${localEnv:FROM_VARIANT}",
             "ANSIBLE_INSTALL_LOCATION": "${localEnv:ANSIBLE_INSTALL_LOCATION}",
+            "PYAVD_INSTALL_LOCATION": "${localEnv:PYAVD_INSTALL_LOCATION}",
             "ANSIBLE_CORE_VERSION": "${localEnv:ANSIBLE_CORE_VERSION}",
             "USERNAME": "${localEnv:USERNAME}"
         }
