--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10638,6 +10638,10 @@ keys:
             keys:
               d_path:
                 type: bool
+          redistribute_internal:
+            type: bool
+            description: Allow redistribution of iBGP routes into an Interior Gateway
+              Protocol (IGP). EOS default is true.
       listen_ranges:
         type: list
         description: 'Improved "listen_ranges" data model to support multiple listen
@@ -11740,6 +11744,13 @@ keys:
                 route_map:
                   description: Route-map name.
                   type: str
+          bgp:
+            type: dict
+            keys:
+              redistribute_internal:
+                type: bool
+                description: Allow redistribution of iBGP routes into an Interior
+                  Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -12026,6 +12037,13 @@ keys:
                 route_map:
                   description: Route-map name.
                   type: str
+          bgp:
+            type: dict
+            keys:
+              redistribute_internal:
+                type: bool
+                description: Allow redistribution of iBGP routes into an Interior
+                  Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -12744,6 +12762,13 @@ keys:
               description: VRF name.
               convert_types:
               - int
+            bgp:
+              type: dict
+              keys:
+                redistribute_internal:
+                  type: bool
+                  description: Allow redistribution of iBGP routes into an Interior
+                    Gateway Protocol (IGP). EOS default is true.
             rd:
               type: str
               description: Route distinguisher.
@@ -13249,6 +13274,10 @@ keys:
                               - str
                               min: 2
                               max: 64
+                    redistribute_internal:
+                      type: bool
+                      description: Allow redistribution of iBGP routes into an Interior
+                        Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
@@ -13411,6 +13440,10 @@ keys:
                               - str
                               min: 2
                               max: 64
+                    redistribute_internal:
+                      type: bool
+                      description: Allow redistribution of iBGP routes into an Interior
+                        Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
