--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -150,6 +150,9 @@ keys:
             keys:
               d_path:
                 type: bool
+          redistribute_internal:
+            type: bool
+            description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
       listen_ranges:
         type: list
         description: |
@@ -1210,6 +1213,12 @@ keys:
                 route_map:
                   description: Route-map name.
                   type: str
+          bgp:
+            type: dict
+            keys:
+              redistribute_internal:
+                type: bool
+                description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -1490,6 +1499,12 @@ keys:
                 route_map:
                   description: Route-map name.
                   type: str
+          bgp:
+            type: dict
+            keys:
+              redistribute_internal:
+                type: bool
+                description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
           peer_groups:
             type: list
             primary_key: name
@@ -2207,6 +2222,12 @@ keys:
               description: VRF name.
               convert_types:
                 - int
+            bgp:
+              type: dict
+              keys:
+                redistribute_internal:
+                  type: bool
+                  description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
             rd:
               type: str
               description: Route distinguisher.
@@ -2674,6 +2695,9 @@ keys:
                                 - str
                               min: 2
                               max: 64
+                    redistribute_internal:
+                      type: bool
+                      description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
@@ -2829,6 +2853,9 @@ keys:
                                 - str
                               min: 2
                               max: 64
+                    redistribute_internal:
+                      type: bool
+                      description: Allow redistribution of iBGP routes into an Interior Gateway Protocol (IGP). EOS default is true.
                 neighbors:
                   type: list
                   primary_key: ip_address
