--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -11175,13 +11175,15 @@ keys:
               description: Route-map name.
               deprecation:
                 removed: true
-                remove_in_version: 4.9.0
+                warning: true
+                remove_in_version: v4.9.0
             supress_map:
               type: str
               description: Route-map name.
               deprecation:
                 removed: true
-                remove_in_version: 4.9.0
+                warning: true
+                remove_in_version: v4.9.0
             summary_only:
               type: bool
             attribute_map:
@@ -13193,13 +13195,15 @@ keys:
                     description: Route-map name.
                     deprecation:
                       removed: true
-                      remove_in_version: 4.9.0
+                      warning: true
+                      remove_in_version: v4.9.0
                   supress_map:
                     type: str
                     description: Route-map name.
                     deprecation:
                       removed: true
-                      remove_in_version: 4.9.0
+                      warning: true
+                      remove_in_version: v4.9.0
                   summary_only:
                     type: bool
                   attribute_map:
