--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -658,13 +658,15 @@ keys:
               description: Route-map name.
               deprecation:
                 removed: true
-                remove_in_version: 4.9.0
+                warning: true
+                remove_in_version: v4.9.0
             supress_map:
               type: str
               description: Route-map name.
               deprecation:
                 removed: true
-                remove_in_version: 4.9.0
+                warning: true
+                remove_in_version: v4.9.0
             summary_only:
               type: bool
             attribute_map:
@@ -2620,13 +2622,15 @@ keys:
                     description: Route-map name.
                     deprecation:
                       removed: true
-                      remove_in_version: 4.9.0
+                      warning: true
+                      remove_in_version: v4.9.0
                   supress_map:
                     type: str
                     description: Route-map name.
                     deprecation:
                       removed: true
-                      remove_in_version: 4.9.0
+                      warning: true
+                      remove_in_version: v4.9.0
                   summary_only:
                     type: bool
                   attribute_map:
