--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
@@ -227,14 +227,14 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    description: Make EVPN routes received from WAN less preferred when sending them to peer.
+    description: Make EVPN routes learned from WAN less preferred on HA peer
     match:
     - route-type internal
     set:
     - local-preference 50
   - sequence: 20
     type: permit
-    description: Make locally injected routes less preferred when sending them to peer over EVPN.
+    description: Make locally injected routes less preferred on HA peer
     set:
     - local-preference 75
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
