--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -449,7 +449,7 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
-   description Make tagged routes received from WAN HA peer less preferred for LAN router
+   description Make routes learned from WAN HA peer less preferred on LAN routers
    match route-type internal
    match tag 50
    set metric 50
@@ -459,7 +459,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    match route-type local
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
-   description Advertise routes received from WAN iBGP towards LAN
+   description Advertise routes learned from WAN iBGP towards LAN
    match route-type internal
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 40
@@ -489,12 +489,12 @@ route-map RM-WAN-HA-PEER-IN permit 10
    set tag 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 10
-   description Make EVPN routes received from WAN less preferred when sending them to peer.
+   description Make EVPN routes learned from WAN less preferred on HA peer
    match route-type internal
    set local-preference 50
 !
 route-map RM-WAN-HA-PEER-OUT permit 20
-   description Make locally injected routes less preferred when sending them to peer over EVPN.
+   description Make locally injected routes less preferred on HA peer
    set local-preference 75
 !
 router bfd
